--- a/art_m9/p_agency/users/templates/users/index2.html
+++ b/art_m9/p_agency/users/templates/users/index2.html
@@ -4,11 +4,15 @@
 	<h1>Users</h1>
 	<ul>
 		{% for user in users %}
-		<li> 
+			<li> 
 			
-				User2 (id : {{user.id}}) : {{user.first_name}} {{user.last_name}} {{user.email}}
-			</a>
-		</li>	
+			User2 (id : {{user.id}}) : {{user.first_name}} {{user.last_name}} {{user.email}}
+			
+			
+			</li>
+		{% empty %}
+			<li> no users </li>
+
 		{% endfor %} 
 
 	</ul>	
