--- a/art_m9/p_agency/users/templates/users/user2.html
+++ b/art_m9/p_agency/users/templates/users/user2.html
@@ -9,7 +9,8 @@
 		<li>first_name : {{user2.first_name}}</li>
 		<li>last_name : {{user2.last_name}}</li>
 		<li>email = {{user2.email}}</li>
-
+		<li>nick = {{user2.profile.nick}}</li>
+		<li>phone = {{user2.profile.phone}}</li>
 
 	</ul>
 
