--- a/art_m9/p_agency/campaigns/templates/campaigns/index.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/index.html
@@ -13,5 +13,8 @@
 
 	</ul>	
 
-
+	<h2>Campaigns' houses</h2>
+	<a href = "{% url 'campaigns:h_index' %}"> See all campaigns' houses list</a>	
+	<p></p>
+	
 {% endblock %}
