final commit for module 9 level 1. Title pages common and user

--- a/art_m9/p_agency/campaigns/templates/campaigns/index.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/index.html
@@ -16,5 +16,8 @@
 	<h2>Campaigns' houses</h2>
 	<a href = "{% url 'campaigns:h_index' %}"> See all campaigns' houses list</a>	
 	<p></p>
-	
+
+	<a href = "{% url 'users:logout' %}"> Log out </a>
+	<p></p>
+		
 {% endblock %}
