--- a/art_m9/p_agency/main/templates/main/index.html
+++ b/art_m9/p_agency/main/templates/main/index.html
@@ -2,6 +2,10 @@
 
 {% block body %}
 
+	<h2>Campaigns' list</h2>
+	<a href = "{% url 'campaigns:index2' %}"> Campaigns' list</a>	
+	<p></p>
+
 	<h2>Users' list</h2>
 	<a href = "{% url 'users:index2' %}"> Users' list</a>	
 	<p></p>
