--- a/art_m9/p_agency/users/templates/users/user2.html
+++ b/art_m9/p_agency/users/templates/users/user2.html
@@ -19,7 +19,8 @@
 		<p></p>
 	{% endif %}
 
-
+	<a href = "{% url 'campaigns:index' %}"> Campaigns' detailed list info </a>
+	<p></p>
 
 	<a href = "{% url 'users:logout' %}"> Log out </a>
 	<p></p>
