--- a/art_m9/p_agency/main/templates/main/layout.html
+++ b/art_m9/p_agency/main/templates/main/layout.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Project's title page</title>
+	<style>
+		body {
+			text-align : center;
+		}
+	</style>
 </head>
 <body>
 	{% block body %}
