authorized user can now create a new campaign

--- a/art_m9/p_agency/campaigns/templates/campaigns/index.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/index.html
@@ -9,6 +9,10 @@
 				Campaign {{campaign.id}} : {{campaign.title}}
 			</a>
 		</li>	
+
+		{% empty %}
+			<li> no campaigns</li>
+
 		{% endfor %} 
 
 	</ul>	
@@ -16,6 +20,9 @@
 	<h2>Campaigns' houses</h2>
 	<a href = "{% url 'campaigns:h_index' %}"> See all campaigns' houses list</a>	
 	<p></p>
+
+	<a href = "{% url 'campaigns:add' %}"> Create new campaign </a>
+	<p></p>	
 
 	<a href = "{% url 'users:logout' %}"> Log out </a>
 	<p></p>
