--- a/art_m9/p_agency/campaigns/templates/campaigns/index2.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/index2.html
@@ -6,6 +6,8 @@
 	<ol>
 		{% for campaign in campaigns %}
 			<li> Campaign {{campaign.id}} : {{campaign.title}}</li> 
+		{% empty %}
+			<li> no campaigns</li>
 		{% endfor %} 
 	</ol>	
 
