authorized user can create new campaign and it is on his/her profile page

--- a/art_m9/p_agency/campaigns/templates/campaigns/campaign.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/campaign.html
@@ -6,7 +6,7 @@
 		<li>Title : {{campaign.title}}</li>
 		<li>Status : {{campaign.status}}</li>
 		<li>Supervisor = {{campaign.supervisor.nick}}</li>
-
+		<li>Creator = {{campaign.creator.username}}</li>
 	</ul>
 
 	<h1> Campaign's houses : </h1>
