--- a/art_m9/p_agency/campaigns/templates/campaigns/h2_index.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/h2_index.html
@@ -16,6 +16,6 @@
 
 	</ul>
 
-	<a href = "{% url 'campaigns:index' %}"> Back to campaigns list </a>
-	
+	<a href = "{% url 'campaigns:indexplususer2' user2.id %}"> Back to campaigns list </a>
+
 {% endblock %}
