--- a/art_m9/p_agency/campaigns/templates/campaigns/add.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/add.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 	<h2>Create new campaign</h2>
-	<form action = "{% url 'campaigns:add' %}" method = "post"> 
+	<form action = "{% url 'campaigns:add' user2.id %}" method = "post"> 
 		{% csrf_token %}
 			
 		<input type="text" name="title" placeholder="Campaign_title">
