check_up related classes are on and check_ups with corresponding results view are on

--- a/art_m9/p_agency/campaigns/templates/campaigns/campaign.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/campaign.html
@@ -33,5 +33,19 @@
 		
 	</form>
 
+	<h1> Campaign's checkups : </h1>
+	<ol>
+		{% for checkup in checkups %}
+			<li>
+			 	<a href="{% url 'campaigns:checkup' checkup.id %}">
+					Check UP {{checkup.id}} : {{checkup}}
+				</a>
+			</li>
+		{% empty %}
+			<li> no checkups</li>
+		{% endfor %}
+
+	</ol>	
+
 	<a href = "{% url 'campaigns:index' %}"> Back to campaigns list </a>
 {% endblock %}
