--- a/art_m9/p_agency/campaigns/templates/campaigns/index.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/index.html
@@ -22,6 +22,10 @@
 	<a href = "{% url 'campaigns:h_index' %}"> See all campaigns' houses list</a>	
 	<p></p>
 
+	<h2>Campaigns' check ups</h2>
+	<a href = "{% url 'campaigns:cu_index' %}"> See all campaigns' check ups list</a>	
+	<p></p>
+
 	<a href = "{% url 'users:logoutplus' %}"> Create new campaign </a>
 	<p></p>
 
