--- a/art_m9/p_agency/campaigns/templates/campaigns/indexplususer2.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/indexplususer2.html
@@ -25,10 +25,28 @@
 	<p></p>
 
 	<h2>Create new campaign</h2>
-	<a href = "{% url 'campaigns:add' user2.id %}"> Create new campaign </a>
+	<form action = "{% url 'campaigns:add' user2.id %}" method = "post"> 
+		{% csrf_token %}
+			
+		<input type="text" name="title" placeholder="Campaign_title">
+		<p></p>
+		<input type="text" name="status" placeholder="A, P, F">
+		<p></p>
+
+		<select name = 'supervisor'>
+			{% for supervisor in supervisors %}
+				<option value="{{supervisor.id}}">{{ supervisor.nick }}</option>
+			{% endfor %}
+		</select>
+
+		<p></p>			
+		<input type="submit">
+		
+	</form>
+
 	<p></p>	
 
-	
+
 	<a href = "{% url 'users:logout' %}"> Log out </a>
 	<p></p>
 	
