--- a/art_m9/p_agency/campaigns/templates/campaigns/add_result.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/add_result.html
@@ -1,5 +1,17 @@
 {% extends 'campaigns/layout.html' %}
 
+{% block head %}
+
+	<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded', function() {
+			document.querySelector('#open').onclick = function() {
+				document.querySelector('#openyes').style.visibility = 'visible';
+			}
+		})
+	</script>
+
+{% endblock %}	
+
 {% block body %}
 	<p> Check UP {{checkup.id}}: {{checkup}}</p>
 	<p></p>
@@ -7,54 +19,72 @@
 	<h2>Current checkup_results</h2>
 	<ol>
 		{% for checkupresult in checkupresult_list %}
-			<li>APART : apart_# : {{checkupresult.apart.number}} {{checkupresult}} </li>
+			<li>{{checkupresult.opinion}} : apart_# : {{checkupresult.apart.number}} {{checkupresult}} </li>
 		{% empty %}
 			<li> no checkupresults </li>
 		{% endfor %}
 
 	</ol>
 
-	<h2>Add new result</h2>
-	<form action = "{% url 'campaigns:add_result' checkup.id %}" method = "post"> 
-		{% csrf_token %}
-		
-		<select name = 'apart'>
-			{% for apart in extra_aparts %}
-				<option value = '{{apart.id}}'>{{apart}}</option>
-			{% endfor %}
-		</select>
+	{% if message %}
+
+		<h2>Add new result</h2>
+		<form action = "{% url 'campaigns:add_result' checkup.id %}" method = "post"> 
+			{% csrf_token %}
+			
+			<select name = 'apart'>
+				{% for apart in extra_aparts %}
+					<option value = '{{apart.id}}'>{{apart}}</option>
+				{% endfor %}
+			</select>
+
+			<p></p>
+			<label>contact date&time</label>
+			<input type="datetime-local" name="c_date">
+			<p></p> 
+			<label>open door</label>
+			<input id="open" type="checkbox" name="open_door" placeholder="True/False">
+			<p></p>
+
+			<div id="openyes" style = 'visibility: hidden;'>
+
+				<label>opinion</label>
+				<select name="opinion">
+
+					<option value = 'positive'>positive</option>
+					<option value = 'neutral' selected>neutral</option>
+					<option value = 'negative'>negative</option>
+
+				</select>
+
+				<p></p>
+				<input type="text" name="c_name" placeholder="contact name">
+				<p></p>
+				<input type="text" name="c_phone" placeholder="contact phone">
+				<p></p>
+
+				<textarea name="comments" placeholder="comments"></textarea>
+				<p></p>
+
+			</div>
+
+			<p></p>			
+			<input type="submit">
+			
+		</form>
+
+		<p></p>	
+
+	{% else %}
 
 		<p></p>
-		<label>contact date&time</label>
-		<input type="datetime-local" name="c_date">
-		<p></p> 
-		<label>open door</label>
-		<input type="checkbox" name="open_door" placeholder="True/False">
+		<h2>NO MORE : checkup_results' list is full</h2>
 		<p></p>
 
-		<label>opinion</label>
-		<select name="opinion">
-			<option value = 'positive'>positive</option>
-			<option value = 'neutral'>neutral</option>
-			<option value = 'negative'>negative</option>			
-		</select>
+		<a href = "{% url 'campaigns:cu_index' %}"> Check_ups' list </a>
+		<p></p>		
 
-		<p></p>
-		<input type="text" name="c_name" placeholder="contact name">
-		<p></p>
-		<input type="text" name="c_phone" placeholder="contact phone">
-		<p></p>
-
-		<textarea name="comments" placeholder="comments"></textarea>
-		<p></p>
-
-		<p></p>			
-		<input type="submit">
-		
-	</form>
-
-	<p></p>	
-
+	{% endif %}
 
 	<a href = "{% url 'users:logout' %}"> Log out </a>
 	<p></p>
