--- a/art_m9/p_agency/campaigns/templates/campaigns/layout.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/layout.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Campaigns</title>
+
+	{% block head %}
+	{% endblock %}	
+		
 </head>
 <body>
 	{% block body %}
