Statistics is done

--- a/art_m9/p_agency/campaigns/templates/campaigns/index.html
+++ b/art_m9/p_agency/campaigns/templates/campaigns/index.html
@@ -26,6 +26,10 @@
 	<a href = "{% url 'campaigns:cu_index' %}"> See all campaigns' check ups list</a>	
 	<p></p>
 
+	<h2>Campaigns' statictics</h2>
+	<a href = "{% url 'campaigns:stat_index' %}"> See all campaigns' statistics list</a>	
+	<p></p>
+
 	<a href = "{% url 'users:logoutplus' %}"> Create new campaign </a>
 	<p></p>
 
