--- a/art_m9/p_agency/main/templates/main/index.html
+++ b/art_m9/p_agency/main/templates/main/index.html
@@ -2,13 +2,13 @@
 
 {% block body %}
 	<a href = "{% url 'campaigns:index2' %}"> 
-		<h2 style = 'color: red;'>Campaigns' list</h2>
+		<h2 style = 'color: red;'>Campaigns' list(no registration)</h2>
 	</a>	
 	
 	<p></p>
 
 	<a href = "{% url 'users:index2' %}">
-		<h2 style = 'color: red;'>Users' list</h2>
+		<h2 style = 'color: red;'>Users' list(no registration)</h2>
 	</a>
 
 	<p></p>
