--- a/art_m9/p_agency/users/templates/users/user20.html
+++ b/art_m9/p_agency/users/templates/users/user20.html
@@ -24,7 +24,12 @@
 			
 		<input type="text" name="nick" placeholder="Nick_name">
 		<input type="text" name="phone" placeholder="Phone">
-			
+
+		<input type="text" name="sex" placeholder="male or female">
+		<input type="text" name="address" placeholder="city, street, house, flat">
+
+		<input type="date" name="bdate" required>	
+
 		<input type="submit">
 		
 	</form>
