moved from User to Profile : f_name, l_name and email

--- a/art_m9/p_agency/users/templates/users/index2.html
+++ b/art_m9/p_agency/users/templates/users/index2.html
@@ -6,7 +6,9 @@
 		{% for user in users %}
 			<li> 
 			
-			User2 (id : {{user.id}}) : {{user.first_name}} {{user.last_name}} {{user.email}}
+<!-- 			User2 (id : {{user.id}}) : {{user.first_name}} {{user.last_name}} {{user.email}}
+ -->
+			User2 (id : {{user.id}}) : {{user.username}}
 			
 			
 			</li>
