fixing user's password is done

--- a/art_m9/p_agency/users/templates/users/user2.html
+++ b/art_m9/p_agency/users/templates/users/user2.html
@@ -45,6 +45,10 @@
 	<a href = "{% url 'users:c_profile2' user2.id %}"> Fix user's profile </a>
 	<p></p>
 
+	<a href = "{% url 'users:c_password' %}"> Fix user's password </a>
+	<p></p>
+
+
 	<a href = "{% url 'users:logout' %}"> Log out </a>
 	<p></p>
 	
