--- a/art_m9/p_agency/users/templates/users/c_password.html
+++ b/art_m9/p_agency/users/templates/users/c_password.html
@@ -5,11 +5,22 @@
 
     <form method="post">
         {% csrf_token %}
-        {{form}}
+        {% load bootstrap %}
+        {{form|bootstrap}}
     
-        <input type="submit" value="Submit">
+    	<div class="col-12">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+<!--         <input type="submit" value="Submit">
+ -->        
     </form>
 
+    <p></p>
+    <nav class="navbar bg-dark bg-opacity-75">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="{% url 'users:index2' %}">Back to users' list</a>
+            <a class="navbar-brand text-white" href="{% url 'users:user2' user.id %}"> Back to user2's page </a>
+        </div>
+    </nav>
 	<p></p>
-    <a href="{% url 'users:index2' %}">Back to users' list</a>
 {% endblock %}
