--- a/art_m9/p_agency/users/templates/users/user20.html
+++ b/art_m9/p_agency/users/templates/users/user20.html
@@ -4,40 +4,56 @@
 	<h1>Welcome, {{user20.username}}</h1>
 
 	<h1> User2.0 (user_id : {{user20.id}}) : </h1>
-<!-- 	<ul>
 
-		<li>first_name : {{user20.first_name}}</li>
-		<li>last_name : {{user20.last_name}}</li>
-		<li>email = {{user20.email}}</li>
-
-
-	</ul>
- -->
 	{% if message %}
 		<div> {{message}}</div>
 		<p></p>
 	{% endif %}
 
 	<h2>Create user_profile</h2>
-	<form action = "{% url 'users:create_profile2' user20.id %}" method = "post"> 
+	<form class="form-floating" action = "{% url 'users:create_profile2' user20.id %}" method = "post"> 
 		{% csrf_token %}
 			
-		<input type="text" name="nick" placeholder="Nick_name">
-		<input type="text" name="phone" placeholder="Phone">
+		<div class="form-floating">
+			<input type="text" class="form-control" name="nick" placeholder="Nick_name">
+			<label for="floatingInputValue">nick</label>
+		</div>
+		<div class="form-floating">		
+			<input type="text" class="form-control" name="phone" placeholder="Phone">
+			<label for="floatingInputValue">phone</label>
+		</div>
+		<div class="form-floating">
+			<input type="text" class="form-control" name="f_name" placeholder="first name">
+			<label for="floatingInputValue">first name</label>
+		</div>
+		<div class="form-floating">			
+			<input type="text" class="form-control" name="l_name" placeholder="last name">
+			<label for="floatingInputValue">last name</label>
+		</div>
+		<div class="form-floating">		
+			<input type="email" class="form-control" name="email" placeholder="c@ya.ru">
+			<label for="floatingInputValue">email</label>
+		</div>
+		<div class="form-floating">
+			<input type="text" class="form-control" name="sex" placeholder="male or female">
+			<label for="floatingInputValue">sex</label>
+		</div>
+		<div class="form-floating">			
+			<input type="text" class="form-control" name="address" placeholder="city, street, house, flat">
+			<label for="floatingInputValue">address</label>
+		</div>
+		<div class="form-floating">
+			<input type="date" class="form-control" name="bdate" required>
+			<label for="floatingInputValue">birth_date</label>	
+		</div>
+		<div class="form-floating">
+            <button type="submit" class="btn btn-primary">Register profile</button>
+        </div>		
 
-		<input type="text" name="f_name" placeholder="first name">
-		<input type="text" name="l_name" placeholder="last name">
-		<input type="email" name="email" placeholder="c@ya.ru">
-
-
-		<input type="text" name="sex" placeholder="male or female">
-		<input type="text" name="address" placeholder="city, street, house, flat">
-
-		<input type="date" name="bdate" required>	
-
-		<input type="submit">
-		
+<!-- 		<input type="submit">
+ -->		
 	</form>
+	<p></p>
 
 	
 {% endblock %}
