--- a/art_m9/p_agency/users/templates/users/login.html
+++ b/art_m9/p_agency/users/templates/users/login.html
@@ -1,5 +1,17 @@
 {% extends 'users/layout.html' %}
 
+{% block head %}
+<!-- 	<link rel="stylesheet" type="text/css" href="if_color.css">
+ -->
+
+ 	<style>
+ 		.msg2 {
+ 			font-weight: bold;
+ 			color: yellow;
+ 		}
+ 	</style>
+{% endblock %}
+
 {% block body %}
 
 	<form class="form-floating" action="{% url 'users:login' %}" method="post">
@@ -18,14 +30,18 @@
   		</div>
 	</form>
 
-	{% if message %}
-		{% if message == ' Logged out ' or message == ' invalid username and/or password ' %}
-			<div style="color: red; font-weight: bold;"> {{message}}</div>
-		{% elif message == ' To create new campaign : 1. log in 2. move to create new campaign^2 '%}
-			<div style="color: blueviolet; font-weight: bold;"> {{message}}</div>
-		{% else %}
-			<div style="color: seagreen; font-weight: bold;"> {{message}}</div>
-		{% endif %}
+	{% if msg_2 %}
+		<div class = 'msg2'>
+			{% if msg_2.msg_type == 'positive' %}
+				<p style = 'color: green;'>{{msg_2.msg_text}}</p>
+			{% elif msg_2.msg_type == 'negative' %}
+				<p style = 'color: red;'>{{msg_2.msg_text}}</p>
+			{% elif msg_2.msg_type == 'neutral' %}
+				<p style = 'color: darkgrey;'>{{msg_2.msg_text}}</p>
+			{% else %}
+				<p>{{msg_2.msg_text}}</p>
+			{% endif %}
+		</div>
 
 		<nav class="navbar bg-dark bg-opacity-75">
 			<div class="container-fluid">
